# open-employee-core

./: .gitignore  Dockerfile  README.md  apprunner.yaml  pyproject.toml
.github/workflows/: ci.yml
core/: __init__.py
core/contracts/: __init__.py  feedback.py
core/workflows/: __init__.py  feedback_roadmap.py
docs/: aws-smoke-test.md  contract-source-map.md  llm-tool-selection-activity.md  upstream-temporal-ai-agent-pr61-contracts.md
src/openemployee_core/: __init__.py
src/openemployee_core/activities/: __init__.py  llm_mock.py  mcp_mock.py  policy_activity.py
src/openemployee_core/contracts/: __init__.py  common.py  llm.py  mcp.py  policy.py
src/openemployee_core/naming/: __init__.py  activity_names.py
src/openemployee_core/policy/: __init__.py  engine.py
src/openemployee_core/safety/: __init__.py  guards.py
src/openemployee_core/smoke/: app.py
src/openemployee_core/workflows/: __init__.py  employee_workflow.py
tests/: test_activity_naming.py  test_contracts.py  test_naming.py  test_safety.py  test_smoke_app.py  test_workflow.py  test_workflow_imports.py
